--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .time-card {
   border-radius: 0.3rem !important;
-  margin-bottom: 1.5rem !important;
+  margin-bottom: 0.625rem !important;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
   position: relative;
   display: flex;
@@ -14,7 +14,12 @@
   text-align: center !important;
 }
 
+small {
+  font-size: x-small;
+}
+
 .card-header {
+  height: 50px;
   padding: 0.25rem 1.25rem;
   margin-bottom: 0;
   background-color: rgba(0, 0, 0, 0.03);
@@ -28,4 +33,8 @@
   font-size: 1.25rem;
   font-weight: 500;
   line-height: 1.2;
+}
+
+#result-div {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
